--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,24 @@ dmypy.json
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+# Airflow configuration
+airflow.cfg
+unittests.cfg
+airflow_login.py
+dbinit.py
+initdb.py
+secrets.py
+
+# Airflow sqlite databases
+airflow.db
+unittests.db
+
+# Airflow temporary artifacts
+airflow/git_version
+airflow/www/static/coverage/
+airflow/www/static/dist
+
+/logs/
+airflow-webserver.pid
+standalone_admin_password.txt
